2004-09-12  Ulrich Drepper  <drepper@redhat.com>

	* nscd/pwdcache.c (cache_addpw): Sync also negative results to disk.
	* nscd/grpcache.c (cache_addgr): Likewise.
	* nscd/hstcache.c (cache_addhst): Likewise.

2004-09-11  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/i386/init-first.c (init1) [! SHARED]:
	Set _dl_phdr and _dl_phnum.
	(init1): When bootstrap task, bail early and never examine *D.

2004-09-11  Alfred M. Szmidt  <ams@kemisten.nu>

	* sysdeps/mach/hurd/i386/tls.h (__i386_set_gdt) [!HAVE_I386_SET_GDT]:
	Cast THR, SEL and DESC to `void'.

2004-09-11  Ulrich Drepper  <drepper@redhat.com>

	* nscd/connections.c (nscd_run): Call setup_thread only for enabled
	databases.

	* sysdeps/unix/bsd/bsd4.4/bits/socket.h: Use __NTH for __cmsg_nxthdr.

2004-09-10  Ulrich Drepper  <drepper@redhat.com>

	* nscd/nscd.c (pagesize_m1): New variable.
	(main): Initialize it.
	* nscd/nscd.h: Declare pagesize_m1.
	* nscd/hstcache.c: Pass correctly aligned address to msync.
	* nscd/grpcache.c: Likewise.
	* nscd/pwdcache.c: Likewise.

2004-09-10  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/unix/sysv/linux/sh/pthread_cond_wait.S: Decrement
	__nwaiters.  If pthread_cond_destroy has been called and this is
	the last waiter, signal pthread_cond_destroy caller and	avoid
	using the pthread_cond_t structure after unlock.
	* sysdeps/unix/sysv/linux/sh/pthread_cond_timedwait.S: Likewise.

2004-09-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/kernel-features.h: Don't define
	__ASSUME_CLONE_STOPPED.

2004-09-10  Jakub Jelinek  <jakub@redhat.com>

	* misc/sys/cdefs.h (__REDIRECT_NTH): Change order of __THROW and
	__asm__ for C++.  [BZ #377]

2004-09-10  Ulrich Drepper  <drepper@redhat.com>

	* nscd/nscd_stat.c: Improve output by also printing .shared and
	.persistent.

	* nscd/connections.c: Allow cache sharing to be really disabled.

2004-09-10  Jakub Jelinek  <jakub@redhat.com>

	* malloc/malloc.c (_int_free): Only do arena boundary check for